--- a/msu.html
+++ b/msu.html
@@ -185,42 +185,6 @@
         </footer>
     </div>
 
-    <script>
-        // Dark Mode Toggle
-        const darkModeToggle = document.getElementById('darkModeToggle');
-        const htmlElement = document.documentElement;
-        const logoImages = document.querySelectorAll('.logo-image');
-        const toggleIcon = document.querySelector('.toggle-icon-light');
-
-        // Check for saved dark mode preference or default to light mode
-        const isDarkMode = localStorage.getItem('darkMode') === 'true';
-        if (isDarkMode) {
-            htmlElement.classList.add('dark-mode');
-            logoImages[0].classList.add('dark-hidden');
-            logoImages[1].classList.remove('dark-hidden');
-            if (toggleIcon) toggleIcon.src = 'asset/icons/dark_icon.png';
-        } else {
-            logoImages[0].classList.remove('dark-hidden');
-            logoImages[1].classList.add('dark-hidden');
-            if (toggleIcon) toggleIcon.src = 'asset/icons/light_icon.png';
-        }
-
-        darkModeToggle.addEventListener('click', () => {
-            htmlElement.classList.toggle('dark-mode');
-            const isNowDark = htmlElement.classList.contains('dark-mode');
-            localStorage.setItem('darkMode', isNowDark);
-            
-            // Toggle logo visibility
-            if (isNowDark) {
-                logoImages[0].classList.add('dark-hidden');
-                logoImages[1].classList.remove('dark-hidden');
-                if (toggleIcon) toggleIcon.src = 'asset/icons/dark_icon.png';
-            } else {
-                logoImages[0].classList.remove('dark-hidden');
-                logoImages[1].classList.add('dark-hidden');
-                if (toggleIcon) toggleIcon.src = 'asset/icons/light_icon.png';
-            }
-        });
-    </script>
+    <script src="scripts.js"></script>
 </body>
 </html>
