fix: add line break in product manager title for better text wrapping

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
               <div class="card-logo"><img src="asset/Waggoner_Logo.png" alt="Waggoner Financial" class="logo-img" /></div>
               <div class="card-product-image"><img src="asset/Computer_images/Cobra_Computer.png" alt="Waggoner Prototype" class="product-img" /></div>
               <div class="card-product-name">Waggoner Financial</div>
-              <a href="waggoner.html" class="card-product-price">UI/UX Designer & Product Manager</a>
+              <a href="waggoner.html" class="card-product-price">UI/UX Designer & Product <wbr /> Manager</a>
             </div>
           </div>
 
@@ -118,7 +118,7 @@
               <div class="card-logo"><img src="asset/Arum_Logo.png" alt="Arum" class="logo-img" /></div>
               <div class="card-product-image"><img src="asset/Computer_images/Arum_Computer.png" alt="Arum Prototype" class="product-img" /></div>
               <div class="card-product-name">Arum</div>
-              <a href="arum.html" class="card-product-price">UI/UX Designer & Product Manager</a>
+              <a href="arum.html" class="card-product-price">UI/UX Designer & Product <wbr /> Manager</a>
             </div>
           </div>
 
@@ -128,7 +128,7 @@
               <div class="card-logo"><img src="asset/CAHP_Logo.png" alt="CAHP" class="logo-img" /></div>
               <div class="card-product-image"><img src="asset/Computer_images/CAHP_computer.png" alt="CAHP Prototype" class="product-img" /></div>
               <div class="card-product-name">Capital Area Housing Partnership</div>
-              <a href="cahp.html" class="card-product-price">UI/UX Designer & Product Manager</a>
+              <a href="cahp.html" class="card-product-price">UI/UX Designer & Product <wbr /> Manager</a>
             </div>
           </div>
         </div>
