fix: adjust mobile line break and increase font size for product manager title

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
               <div class="card-logo"><img src="asset/CAHP_Logo.png" alt="CAHP" class="logo-img" /></div>
               <div class="card-product-image"><img src="asset/Computer_images/CAHP_computer.png" alt="CAHP Prototype" class="product-img" /></div>
               <div class="card-product-name">Capital Area Housing Partnership</div>
-              <a href="cahp.html" class="card-product-price">UI/UX Designer & Product <br class="mobile-break" /> Manager</a>
+              <a href="cahp.html" class="card-product-price">UI/UX Designer & <br class="mobile-break" />Product Manager</a>
             </div>
           </div>
         </div>
