fix: add target and rel attributes to Waggoner Financial link for improved accessibility

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <section class="hero">
       <h1 class="hero-title">Hi, it's Jake!</h1>
-      <p class="hero-text">UI/UX Designer, Product Manager, &amp; Electric Skateboarder. I am a Michigander, making &amp; managing accessible designs from the ground up to actual products being used by companies like <strong><a href="https://www.waggoner-financial.com">Waggoner Financial.</a></strong></p>
+      <p class="hero-text">UI/UX Designer, Product Manager, &amp; Electric Skateboarder. I am a Michigander, making &amp; managing accessible designs from the ground up to actual products being used by companies like <strong><a href="https://www.waggoner-financial.com" target="_blank" rel="noopener noreferrer">Waggoner Financial.</a></strong></p>
     </section>
 
 
