fix: add target and rel attributes to About Client link for improved security

--- a/waggoner.html
+++ b/waggoner.html
@@ -211,7 +211,7 @@
             
 
             <section class="showcase-cta">
-                <a href="https://www.waggoner-financial.com" class="btn-visit-project">About Client</a>
+                <a href="https://www.waggoner-financial.com" class="btn-visit-project" target="_blank" rel="noopener noreferrer">About Client</a>
                 <a href="index.html" class="btn-back-home">Back to Home</a>
             </section>
         </section>
