fix: add navigation hints for carousel with pulse animation

--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
         <input type="radio" name="carousel" id="slide4" />
         <input type="radio" name="carousel" id="slide5" />
 
+        <div class="carousel-nav-hint left">‹</div>
+        <div class="carousel-nav-hint right">›</div>
+
         <div class="carousel-container">
           <div class="carousel-slide">
             <div class="carousel-item" style="background: linear-gradient(135deg, #5D3A6B 0%, #3D1F4A 100%);">
