--- a/msu.html
+++ b/msu.html
@@ -41,6 +41,8 @@
             </nav>
         </header>
 
+        <a href="index.html" class="back-link">Back to Projects</a>
+
         <section class="project-showcase">
             <div class="project-showcase-header">
                 <div class="project-showcase-logo">
