--- a/waggoner.html
+++ b/waggoner.html
@@ -41,7 +41,7 @@
             </nav>
         </header>
 
-        <a href="index.html" class="back-link">Back to Projects</a>
+        <a href="index.html" class="back-link">Back</a>
 
         <section class="project-showcase">
             <div class="project-showcase-header">
