--- a/msu.html
+++ b/msu.html
@@ -41,7 +41,7 @@
             </nav>
         </header>
 
-        <a href="index.html" class="back-link">Back</a>
+        <a href="#" class="back-link" onclick="history.back(); return false;">Previous Page</a>
 
         <section class="project-showcase">
             <div class="project-showcase-header">
