fix: implement scroll reset for back navigation across project pages

--- a/arum.html
+++ b/arum.html
@@ -41,7 +41,7 @@
             </nav>
         </header>
 
-        <a href="#" class="back-link" onclick="window.scrollTo(0, 0); history.back(); return false;">Previous Page</a>
+        <a href="#" class="back-link" onclick="goBackWithScroll(); return false;">Previous Page</a>
 
         <section class="project-showcase">
             <div class="project-showcase-header">
