--- a/contact.html
+++ b/contact.html
@@ -130,7 +130,7 @@
                 document.getElementById('temperature').textContent = temp + '°F';
 
                 const DTWtime = new Date().toLocaleString('en-US', {
-                    timeZone: 'America/Detroit",
+                    timeZone: 'America/Detroit',
                     year: 'numeric',
                     month: 'long',
                     day: 'numeric',
@@ -186,4 +186,5 @@
     </script>
 </body>
 </html>
+
 
