--- a/contact.html
+++ b/contact.html
@@ -142,7 +142,7 @@
             } catch (error) {
                 console.error('Error fetching weather:', error);
                 document.getElementById('temperature').textContent = '--°F';
-                document.querySelector('.weather-date').textContent = 'Date unavailable';
+                document.getElementById('.weather-date').textContent = 'Date unavailable';
             }
         }
 
@@ -187,6 +187,7 @@
     </script>
 </body>
 </html>
+
 
 
 
