--- a/contact.html
+++ b/contact.html
@@ -136,7 +136,7 @@
                     day: 'numeric',
                 });
 
-                const weatherDescription = document.querySelector('.weather-date');
+                const weatherDescription = document.getElementById('.weather-date');
                 weatherDescription.textContent = DTWtime;
             
             } catch (error) {
@@ -187,6 +187,7 @@
     </script>
 </body>
 </html>
+
 
 
 
