--- a/contact.html
+++ b/contact.html
@@ -136,13 +136,13 @@
                     day: 'numeric',
                 });
 
-                const weatherDescription = document.getElementById('.weather-date');
+                const weatherDescription = document.getElementById('weather-date');
                 weatherDescription.textContent = DTWtime;
             
             } catch (error) {
                 console.error('Error fetching weather:', error);
                 document.getElementById('temperature').textContent = '--°F';
-                document.getElementById('.weather-date').textContent = 'Date unavailable';
+                document.getElementById('weather-date').textContent = 'Date unavailable';
             }
         }
 
@@ -187,6 +187,7 @@
     </script>
 </body>
 </html>
+
 
 
 
